fix zosia's name in ids (#32)

--- a/templates/identifier/identifier_template.html
+++ b/templates/identifier/identifier_template.html
@@ -32,8 +32,8 @@
         <div class="organization_placeholder"></div>
         {% endif %}
         <hr />
-        <div class="caption">Zimowy Obóz Studentów Informatyki</div>
-        <div class="date">{{ camp_date }} | {{location}}</div>
+        <div class="caption">Zimowy Obóz Studentów Informatyki A</div>
+        <div class="date">{{location}} | {{ camp_date }}</div>
       </div>
       <div class="cover flip">
         <div class="zosia_logo"><img src="../../assets/zosia.png" /></div>
@@ -51,7 +51,7 @@
         <div class="organization_placeholder"></div>
         {% endif %}
         <hr />
-        <div class="caption">Zimowy Obóz Studentów Informatyki</div>
+        <div class="caption">Zimowy Obóz Studentów Informatyki A</div>
         <div class="date">{{location}} | {{ camp_date }}</div>
       </div>
       <div class="meals">
